package com.imfibit.activitytracker.core

object TestTag {

    const val CHECKBOX = "CHECKBOX"
    const val DAILY_CHECKLIST_LIST_ITEM = "DAILY_CHECKLIST_LIST_ITEM"
    const val DAILY_CHECKLIST_EMPTY_SECTION = "DAILY_CHECKLIST_EMPTY_SECTION"
    const val DAILY_CHECKLIST_LIST = "DAILY_CHECKLIST_LIST"
    const val DAILY_CHECKLIST_MONTH_GRID_DAY = "DAILY_CHECKLIST_MONTH_GRID_DAY_"
    const val ACTIVITY_RECORD = "ACTIVITY_RECORD";
    const val MONTH_GRID_TODAY = "MONTH_GRID_TODAY";
    const val MONTH_GRID_DATE = "MONTH_GRID_TODAY_";

    const val GENERAL_BACK_BUTTON = "GENERAL_BACK_BUTTON"
    const val ONBOARDING_SKIP = "ONBOARDING_SKIP"
    const val ONBOARDING_PAGE = "ONBOARDING_PAGE_"
    const val ONBOARDING_PAGE_GO_TO_APP = "ONBOARDING_PAGE_GO_TO_APP"


    const val DASHBOARD_ADD_ACTIVITY = "DASHBOARD_ADD_ACTIVITY"
    const val DASHBOARD_ACTIVITIES_CONTENT = "DASHBOARD_ACTIVITIES_CONTENT"
    const val DIALOG_ADD_ACTIVITY_TIME = "DIALOG_ADD_ACTIVITY_TIME"
    const val DIALOG_ADD_ACTIVITY_SCORE = "DIALOG_ADD_ACTIVITY_SCORE"
    const val DIALOG_ADD_ACTIVITY_COMPLETION = "DIALOG_ADD_ACTIVITY_COMPLETION"
    const val DIALOG_ADD_ACTIVITY_FOCUS_ITEM = "DIALOG_ADD_ACTIVITY_FOCUS_ITEM"
    const val DIALOG_ADD_CHECKLIST_ITEM = "DIALOG_ADD_ACTIVITY_CHECKLIST_ITEM"
    const val DIALOG_ADD_ACTIVITY_GROUP = "DIALOG_ADD_ACTIVITY_GROUP"
    const val TRACKED_ACTIVITY_SCREEN = "TRACKED_ACTIVITY_SCREEN"
    const val TRACKED_ACTIVITY_EDIT_NAME = "TRACKED_ACTIVITY_EDIT_NAME"
    const val TRACKED_ACTIVITY_ACTION_BUTTON = "TRACKED_ACTIVITY_ACTION_BUTTON"
    const val TRACKED_ACTIVITY_TIME_CLOSE_SESSION = "TRACKED_ACTIVITY_TIME_CLOSE_SESSION"



    const val DAILY_CHECKLIST_EDIT_DIALOG = "DAILY_CHECKLIST_EDIT_DIALOG"
    const val DAILY_CHECKLIST_EDIT_TITLE = "DAILY_CHECKLIST_EDIT_TITLE"
    const val DAILY_CHECKLIST_EDIT_DESCRIPTION = "DAILY_CHECKLIST_EDIT_DESCRIPTION"
    const val DAILY_CHECKLIST_EDIT_CONTINUE = "DAILY_CHECKLIST_EDIT_CONTINUE"
    const val DAILY_CHECKLIST_EDIT_DELETE = "DAILY_CHECKLIST_EDIT_DELETE"



}